--- a/src/app/tracechart/tracechart.component.html
+++ b/src/app/tracechart/tracechart.component.html
@@ -2,7 +2,7 @@
     <table class="table table-borderless " style="border:0px;">
         <thead class="thead">
             <tr>
-                <th class="col-md-2 service-name-header" >Service</th>
+                <th class="col-md-2 service-name-header">Service</th>
                 <th class="col-md-9 span-line">Timeline</th>
                 <th class="col-md-1"></th>
             </tr>
@@ -24,11 +24,11 @@
         </thead>
         <tbody>
             <tr *ngFor="let span of trace.spans">
-                <td class="col-md-2 service-name"  [style.padding-left]="getSpanDepth(span)">
-                        <fa class="btn-service-expander-empty" *ngIf="span.children.length>0 && span.expanded" [name]="'chevron-down'"></fa>
-                        <fa class="btn-service-expander-empty" *ngIf="span.children.length>0 && !span.expanded" [name]="'chevron-right'"></fa>
-                        <div class="btn-service-expander-empty" *ngIf="span.children.length==0"></div>
-                        <a (click)="toggleSpan(span)" href="javascript:void(0)">{{formatServiceName(span)}}</a></td>
+                <td class="col-md-2 service-name" [style.padding-left]="getSpanDepth(span)">
+                    <fa class="btn-service-expander-empty" *ngIf="span.children.length>0 && span.expanded" [name]="'chevron-down'"></fa>
+                    <fa class="btn-service-expander-empty" *ngIf="span.children.length>0 && !span.expanded" [name]="'chevron-right'"></fa>
+                    <div class="btn-service-expander-empty" *ngIf="span.children.length==0"></div>
+                    <a (click)="toggleSpan(span)" href="javascript:void(0)">{{formatServiceName(span)}}</a></td>
                 <td class="col-md-9  span-line">
                     <div class="span">
                         <div class="timeline timeline1"></div>
@@ -38,7 +38,7 @@
                         <div class="timeline timeline5"></div>
                         <div class="timeline timeline6"></div>
 
-                        <template #content let-c="close" let-d="dismiss" >
+                        <template #content let-c="close" let-d="dismiss">
                             <div class="modal-header">
                                 <button type="button" class="close" aria-label="Close" (click)="d('Cross click')">
                                     <span aria-hidden="true">&times;</span>
@@ -48,17 +48,25 @@
                             <div class="modal-body">
                                 <table class="table table-borderless">
                                     <tr>
+                                        <th>Annotation</th>
                                         <th>Date Time</th>
                                         <th>Relative Time</th>
-                                        <th>Annotation</th>
                                         <th>Address</th>
                                     </tr>
-                                    <tr *ngFor="let annotation of span.annotations">
-                                        <td>{{formatDateTime(annotation.timestamp)}}</td>
-                                        <td>{{formatRelativeTime(annotation.timestamp)}}</td>
-                                        <td>{{formatAnnotation(annotation.value)}}</td>
-                                        <td>{{annotation.endpoint.ipv4}}:{{annotation.endpoint.port}} ({{annotation.endpoint.serviceName}})</td>
-                                    </tr>
+                                    <template ngFor let-annotation [ngForOf]="span.annotations">
+                                        <tr>
+                                            <td *ngIf="!annotation.isJson">{{formatAnnotation(annotation.value)}}</td>
+                                            <td *ngIf="annotation.isJson"><b>JSON</b></td>
+                                            <td>{{formatDateTime(annotation.timestamp)}}</td>
+                                            <td>{{formatRelativeTime(annotation.timestamp)}}</td>
+                                            <td>{{annotation.endpoint.ipv4}}:{{annotation.endpoint.port}} ({{annotation.endpoint.serviceName}})</td>
+                                        </tr>
+                                        <tr>
+                                            <td *ngIf="annotation.isJson" colspan="4">
+                                                <pre><code>{{annotation.value}}</code></pre>
+                                            </td>
+                                        </tr>
+                                    </template>
                                 </table>
                             </div>
                             <div class="modal-footer">
