--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,11 @@
 .btn-expander {
-    width: 28px;
+    width: 18px;
+    height: 18px;
+    vertical-align: middle;
+    background-color: #fff;
+    padding:0;
+    border:1px solid gray;
+    line-height: 0px;
 }
 .span {
     width:100%;
