Pins to bootstrap 3 and addresses drift to fix the build
This reverts bootstrap from the alpha, because too much is broken in
bootstrap itself to be usable (yet).

It also pins versions of dev dependencies so things can build
consistently across systems.

Fixes #33
Fixes #32
Fixes #31
Fixes #30
Fixes #29

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-fixed-top navbar-dark bg-inverse">
+<nav class="navbar navbar-fixed-top navbar-inverse">
     <a class="navbar-brand" href="#">Zipkin <small>- Investigate system behavior</small></a>
     <ul class="nav navbar-nav">
         <li class="nav-item">
@@ -9,8 +9,6 @@
         </li>
     </ul>
 </nav>
-
-
 
 <div class="container-fluid" style="padding-top:63px">
     <router-outlet></router-outlet>
