--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,16 +1,20 @@
-<nav class="navbar navbar-fixed-top navbar-dark bg-inverse">
+<nav class="navbar navbar-toggleable-sm fixed-top navbar-inverse bg-inverse">
+    <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
     <a class="navbar-brand" href="#">Zipkin <small>- Investigate system behavior</small></a>
-    <ul class="nav navbar-nav">
-        <li class="nav-item">
-            <a class="nav-link" href="#">Traces</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" href="/#/dependencies">Dependencies</a>
-        </li>
-    </ul>
+
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto">
+            <li class="nav-item">
+                <a class="nav-link" href="#">Traces</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/#/dependencies">Dependencies</a>
+            </li>
+        </ul>
+    </div>
 </nav>
-
-
 
 <div class="container-fluid" style="padding-top:63px">
     <router-outlet></router-outlet>
