--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,19 +1,13 @@
-<nav class="navbar navbar-toggleable-sm fixed-top navbar-inverse bg-inverse">
-    <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-    </button>
+<nav class="navbar navbar-fixed-top navbar-inverse">
     <a class="navbar-brand" href="#">Zipkin <small>- Investigate system behavior</small></a>
-
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav mr-auto">
-            <li class="nav-item">
-                <a class="nav-link" href="#">Traces</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="/#/dependencies">Dependencies</a>
-            </li>
-        </ul>
-    </div>
+    <ul class="nav navbar-nav">
+        <li class="nav-item">
+            <a class="nav-link" href="#">Traces</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="/#/dependencies">Dependencies</a>
+        </li>
+    </ul>
 </nav>
 
 <div class="container-fluid" style="padding-top:63px">
